[package]
name = "netarp"
version = "0.1.0"
edition = "2024"

[dependencies]
pnet = "0.34"
ipnetwork = "0.20"
surrealdb = { version = "2", features = ["kv-rocksdb"] }
async-graphql = { version = "7", features = ["chrono"] }
async-graphql-axum = "7"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
